# bmstu-parallel-lab3

./: README.md  config.h
task1/: client.cpp  config.h  server.cpp
task2/: client.cpp  server.cpp
task3/: client.cpp  server.cpp
task4/: CMakeLists.txt  CMakePresets.json
task4/src/client/: Client.cpp  Client.h  main.cpp
task4/src/server/: Logger.cpp  Logger.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
